--- a/css/type.css
+++ b/css/type.css
@@ -39,8 +39,8 @@ h4 {
 .subtitle{
     font-size: 24px;
     font-weight: 400;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
 }
 
 .tag {
@@ -79,9 +79,7 @@ button:hover {
 }
 
 a {
-    font-family: 'IBM Plex Sans', sans-serif;
     color: black;
-    font-weight: 400;
     letter-spacing: 0.5px;
 }
 
